--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   translator: ^0.1.7
   flutter_tts: ^3.5.3
+  bottom_navy_bar: ^6.0.0
 
 dev_dependencies:
   flutter_test:
