--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   translator: ^0.1.7
   flutter_tts: ^3.5.3
   bottom_navy_bar: ^6.0.0
+  sqflite:
+  path_provider:
 
 dev_dependencies:
   flutter_test:
@@ -56,11 +58,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  uses-material-design: true
+  assets:
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
